--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             English 80% <br/>
                                
                         </p>
-                        <a class="btn btn-dark" href="#skills">Language Proficiency</a>
+                        <a class="btn btn-dark" href="#skills">Skills</a>
                     </div>
                 </div>
             </div>
